[gd_scene load_steps=6 format=3 uid="uid://68mxto1xkfwh"]

[ext_resource type="Texture2D" uid="uid://5qs30ltqvink" path="res://Textures/Constructions/House_Construction.png" id="1_j0kvt"]
[ext_resource type="Script" path="res://Scripts/construction_mode.gd" id="1_oqlik"]
[ext_resource type="Script" path="res://Scripts/building_area.gd" id="3_akhoe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwbgr"]
size = Vector2(95, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_asqhw"]
size = Vector2(99, 97)

[node name="ConstructionMode" type="Node2D"]
script = ExtResource("1_oqlik")

[node name="BuildingSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_j0kvt")

[node name="BuildingArea" type="Area2D" parent="BuildingSprite"]
script = ExtResource("3_akhoe")

[node name="TowerCollision" type="CollisionShape2D" parent="BuildingSprite/BuildingArea"]
position = Vector2(-0.5, 59)
shape = SubResource("RectangleShape2D_mwbgr")

[node name="HouseCollision" type="CollisionShape2D" parent="BuildingSprite/BuildingArea"]
position = Vector2(-0.5, 38.5)
shape = SubResource("RectangleShape2D_asqhw")
